EK-297 - fixed customer support view on small res screen

--- a/front-end/app/styles/_variables.scss
+++ b/front-end/app/styles/_variables.scss
@@ -36,7 +36,7 @@ $lines-three: 3;
 $lines-four: 4;
 $hover-background-color: rgba(158, 158, 158, 0.2);
 $md-toast-content-max-width: 568px;
-$layout-height-sm: 812px;
+$layout-height-sm: 768px;
 
 //ftypography
 $heading-color: #212121;
